--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint:fix": "eslint . --ext .ts,.tsx --fix"
   },
   "dependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.46.2",
     "lenis": "^1.3.4",
     "micromodal": "^0.6.1",
     "normalize.css": "^8.0.1"
